--- a/Assignment32/styles/style.css
+++ b/Assignment32/styles/style.css
@@ -1,70 +1,115 @@
-    html {
-     font-size: 10px;
-     font-family: "Roboto", sans-serif;
-     background-color: #ebecdc;
+    body {
+        font-size: 16px;
+        font-family: "Roboto", sans-serif;
+        background-color: #f4f4f4;
+        line-height: 1.6em;
+        margin: 0;
+    } 
+
+    .container {
+        width: 80%;
+        margin: auto;
+        overflow: hidden;
     }
 
-
-
-
-
-
-
-
-    h1 {
-     font-size: 60px;
-     text-align: center;
-     margin: 0;
-    padding: 20px 0;
-    color: #0a0013;
-    text-shadow: 1px 1px 1px black;
-    }
-
-    p{
-        font-size: 18px;
-    }
-
-    .ul {
-        font-size: 15px;
-        margin: 10px 0;
-    }
-
-
-    .intro{
-        font-size: 24px;
+    #main-header {
+        background-color: beige;
+        color: #333;
+        letter-spacing: 1px;
+        text-indent: 1em;
+        word-spacing: 0.5em;
+        text-transform: uppercase;
         text-align: center;
+    }
+
+
+    #navbar {
+        background-color: #313728;
+        color: white;
+        
+    }
+
+    #navbar ul {
+        list-style-type: none;
+    
+        padding: 15px ;
+        text-align: center;    
+        /*overflow: hidden;*/
+    }
+
+    #navbar li {
+        display: inline;
+        margin:  20px;
+    }
+
+    #navbar a {
+        text-decoration: none;
+        color: white    ;
+        font-size: 20px;
         font-weight: bold;
     }
 
-    /* Classes for links */
-    .center-link{
-        display: block;
-        text-align: center;
-         margin: 20px auto;
+    #showcase { 
+    background-image:url('../img/menu.jpg');; 
+    background-position: center right;
+    min-height: 300px;
+        margin-bottom: 30px;
+    text-align: center;
+    
+    /*align-items: center;*/
+    }
+    
+    #showcase h2 {
+        color: rgb(255, 255, 255);
+        font-size: 50px;
+        line-height: 1.6em;
+        padding-top: 30px;
+        text-shadow: #333 3px 3px 5px;
     }
 
-
-    /* Classes for images */
-    .right-img{
-        float: right;
-        width: 250px;
-        height: auto;
+    #showcase p {
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        text-shadow: #333 3px 3px 5px;
     }
 
-    .left-img{
+    #main {
         float: left;
-        width: 250px;
+        width: 70%;
+        padding: 0 30px;
+        box-sizing: border-box ;
+    }
+
+    #aside {
+        float: right;
+        width: 30%;
+        background: #333;
+        color: #fff ;
+        padding: 10px;
+        box-sizing: border-box;
+        }
+
+
+
+
+
+
+
+
+    /* Classes for img */
+        .center-img{
+        display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 250px;
+            height:auto;
+            }
+
+        .left-img{
+        float: left;
+        width: auto;
         height: auto;
-    }
-
-
-    .center-img{
-       display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 250px;
-        height:auto;
-    }
+        }
 
     /* Classes for figure and figcaption */
     .figure {
@@ -72,23 +117,36 @@
      margin: 20px auto;      /* centers the whole figure block */
      width: fit-content;
     
-    }    /* or use max-width: 300px; */
-
+     }
 
     .figure figcaption {
         font-size: 18px;
      font-style: italic;
      margin-top: 10px;
-    }
+        }
     
+    #main-footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+        margin-top: 40px;
+        }
 
-    p.pinkpanther {
-        color : #f0f
+
+
+
+
+
+
+
+@media(max-width: 600px) {
+    #main, #aside {
+        width: 100%;
+        float: none;
     }
 
-    p.hulk {
-        color : #0f0
+    #showcase h2 {
+        font-size: 30px;
     }
-
-
-    
+}
