--- a/Assignment32/styles/style.css
+++ b/Assignment32/styles/style.css
@@ -1,7 +1,7 @@
     body {
         font-size: 16px;
         font-family: "Roboto", sans-serif;
-        background-color: #f4f4f4;
+        background-color: #ffffff;
         line-height: 1.6em;
         margin: 0;
 
@@ -14,7 +14,7 @@
     }
 
     #main-header {
-        background-color: beige;
+        background-color: rgb(139, 139, 124);
         color: #333;
         letter-spacing: 1px;
         text-indent: 1em;
@@ -146,7 +146,7 @@
         /* حركة ناعمة عند التغيير */
     }
 
-    #search-form button:hover {
+    .search-form button:hover {
         background-color: #444;
         /* يغيّر اللون لو مرّرت الماوس عليه */
     }
@@ -356,3 +356,89 @@
             font-size: 30px;
         }
     }
+
+
+
+    /* اخفاء الـ checkbox */
+#menu-toggle {
+  display: none;
+}
+
+/* شكل زر الهامبرغر */
+.hamburger {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  margin: 15px;
+  z-index: 1001;
+}
+.hamburger span {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 3px;
+  background-color: #000; /* لون الخطوط */
+}
+.hamburger span:nth-child(1) { top: 0; }
+.hamburger span:nth-child(2) { top: 9px; }
+.hamburger span:nth-child(3) { bottom: 0; }
+
+/* ستايل القائمة */
+.menu {
+  position: absolute;
+  top: 0;
+  right: -300px;   /* مخفية باليمين */
+  width: 300px;
+  height: 100%;
+  background-color: #313728;
+  color: #fff;
+  transition: right 0.3s ease;
+  z-index: 1000;
+}
+.menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.menu li {
+  padding: 12px;
+}
+.menu li a {
+  color: #fff;
+  text-decoration: none;
+  ;
+}
+
+/* اظهار القائمة لما يكون الشيكبوكس مفعل */
+#menu-toggle:checked ~ .menu {
+  right: 0;
+}
+
+/* للشاشات الكبيرة: نرجع القائمة أفقية */
+@media (min-width: 768px) {
+  .hamburger { display: none; }
+  .menu {
+    position: static;
+    width: auto;
+    height: auto;
+    background: transparent;
+    right: auto;
+    transition: none;
+  }
+  .menu ul {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+  .menu li {
+    padding: 0 15px;
+  }
+  .menu li a {
+    color: #fff;
+    font-weight: bold;
+  }
+}
+
+
